@@ -544,6 +544,11 @@ ul.nav-menu ul.sub-menu li, ul.nav-menu ul.children li, ul.nav-menu ul, ul.nav-m
 	padding-top: 9px;
 }
 
+h2.post-title {
+	-ms-word-wrap: break-word;
+	word-wrap: break-word;
+}
+
 .post-comments {
 	padding-bottom: 10px;
 }
